<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Intro2"
        android:id="@+id/relaToolbar"
        android:padding="10dp"
        android:elevation="5dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:orientation="vertical"
            android:layout_centerVertical="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="Skapan Hidro"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/body"
                android:fontFamily="@font/productsans"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="normal" />

        </LinearLayout>

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="10dp"
        android:id="@+id/cardLogo"
        android:layout_below="@+id/relaToolbar"
        android:layout_marginEnd="2dp"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/color_white"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="286dp"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logoskapan"
                tools:ignore="VectorDrawableCompat" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="94dp"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/content"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="normal" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/cardLogo"
        android:layout_marginEnd="2dp"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/color_white"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="278dp"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/n_title"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/nk_1"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/nk_2"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/nk_3"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/nk_4"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/nk_5"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/nk_6"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="normal" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>



</RelativeLayout>